--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "builds": [{"src": "*.js", "use": "@now/node"}],
   "routes": [{"src": "/(.*)", "dest": "api.js"}]
 }
