--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,3 @@
 {
-  "version": 2,
-  "builds": [{"src": "*.js", "use": "@now/node"}],
-  "routes": [{"src": "/(.*)", "dest": "api.js"}]
+  "rewrites": [{"source": "/api/(.*)", "destination": "/api"}]
 }
