--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
-  "rewrites": [{"source": "/api/(.*)", "destination": "/api"}]
+  "builds": [{"src": "*.js", "use": "@now/node"}],
+  "routes": [{"source": "/api/(.*)", "destination": "index.js"}]
 }
