Please work Vercel

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@now/node"}],
-  "routes": [{"src": "/api/(.*)", "dest": "index.js"}]
+  "builds": [{"src": "./app.js", "use": "@vercel/node"}],
+  "routes": [{"src": "/(.*)", "dest": "/"}]
 }
