--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{"src": "*.js", "use": "@vercel/node"}],
-  "routes": [{"src": "/", "dest": "index.js"}]
+  "rewrites": [{"source": "/(.*)", "destination": "/api"}]
 }
