--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
-  "rewrites": [{"source": "/(.*)", "destination": "/api"}]
+  "builds": [{"src": "api.js", "use": "@vercel/node"}],
+  "routes": [{"src": "/", "dest": "api.js"}]
 }
