--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{"src": "api.js", "use": "@vercel/node"}],
-  "routes": [{"src": "/", "dest": "api.js"}]
+  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "routes": [{"src": "/", "dest": "api.js"}, {"src": "/products/search", "dest": "api.js"}, {"src": "/products/(.*)", "dest": "api.js"}]
 }
