--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "builds": [{"src": "api.js", "use": "@vercel/node"}],
   "routes": [
     {"src": "/", "dest": "api.js"},
     {"src": "/products/search", "dest": "api.js"},
