--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,8 +2,6 @@
   "version": 2,
   "builds": [{"src": "api.js", "use": "@vercel/node"}],
   "routes": [
-    {"src": "/", "dest": "api.js"},
-    {"src": "/products/search", "dest": "api.js"},
-    {"src": "/products/:id", "dest": "api.js"}
+    {"src": "/(.*)", "dest": "api.js"}
   ]
 }
