--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,7 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "builds": [{"src": "api.js", "use": "@vercel/node"}],
   "routes": [
-    {"src": "/", "dest": "api.js"},
-    {"src": "/products/search", "dest": "api.js/products/search"},
-    {"src": "/products/(?<id>[^/]*)", "dest": "api.js/products/:id"}
+    {"src": "/(.*)", "dest": "/api.js"}
   ]
 }
