--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,8 +2,6 @@
   "version": 2,
   "builds": [{"src": "api.js", "use": "@vercel/node"}],
   "rewrites": [
-    {"source": "/", "destination": "api.js"},
-    {"source": "/products/:id", "destination": "api.js/products/:id"},
-    {"source": "/products/search", "destination": "api.js/products/search"}
+    {"source": "/(.*)", "destination": "/api.js"}
   ]
 }
