--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "builds": [{"src": "api.js", "use": "@vercel/node"}],
+  "builds": [{"src": "*.js", "use": "@vercel/node"}],
   "rewrites": [
-    {"source": "/(.*)", "destination": "/api.js"}
+    {"source": "/", "destination": "/api.js"}
   ]
 }
