--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,6 +2,8 @@
   "version": 2,
   "builds": [{"src": "*.js", "use": "@vercel/node"}],
   "rewrites": [
-    {"source": "/", "destination": "/api.js"}
+    {"source": "/(.*)", "destination": "/api.js"},
+    {"source": "/products/search(.*)", "destination": "/api.js/products/search"},
+    {"source": "/products/(.*)", "destination": "/api.js/products/"}
   ]
 }
