--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,6 +2,6 @@
   "version": 2,
   "builds": [{"src": "*.js", "use": "@now/node"}],
   "routes": [
-    {"src": "(.*)", "dest": "api.js"}
+    {"src": "/", "dest": "api.js"}
   ]
 }
