--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,8 @@
 {
+  "version": 2,
+  "builds": [{"src": "*.js", "use": "@vercel/node"}],
   "rewrites": [
+    {"source": "/", "destination": "api.js"},
     {"source": "/(.*)", "destination": "api.js"}
   ]
 }
