--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "builds": [{"src": "api.js", "use": "@vercel/node"}],
   "routes": [
-    {"src": "/", "dest": "/api.js"}
+    {"src": "/(.*)", "dest": "/"}
   ]
 }
