--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.1",
   "description": "What's the story behind each item of clothing you buy?",
   "main": "index.js",
+  "engines" : {
+    "node": "14.x"
+  },
+  "scripts" : {
+    "start": "node index.js"
+  },
   "repository": "git@github.com:92bondstreet/clear-fashion.git",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
