--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "builds": [{"src": "*.js", "use": "@vercel/node"}],
+  "functions": {"./api.js" : {"maxDuration": 10}},
+  "builds": [{"src": "./api.js", "use": "@vercel/node"}],
   "routes": [
     {"src": "/", "dest": "api.js"}
   ]
