--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,7 @@
 {
   "version": 2,
-  "functions": {"./api.js" : {"maxDuration": 10}},
-  "builds": [{"src": "./api.js", "use": "@vercel/node"}],
+  "builds": [{"src": "./index.js", "use": "@vercel/node"}],
   "routes": [
-    {"src": "/", "dest": "api.js"}
+    {"src": "/(.*)", "dest": "/"}
   ]
 }
