--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "What's the story behind each item of clothing you buy?",
   "main": "index.js",
-  "engines" : {
+  "engines": {
     "node": "14.x"
   },
-  "scripts" : {
+  "scripts": {
     "start": "node index.js"
   },
   "repository": "git@github.com:92bondstreet/clear-fashion.git",
@@ -18,6 +18,7 @@
     "helmet": "^5.0.1",
     "mongodb": "^4.3.1",
     "node-fetch": "^2.6.6",
+    "paginate-info": "^1.0.4",
     "parse-domain": "^4.1.0",
     "require-all": "^3.0.0",
     "uuid": "^8.3.2",
